*feature) 1.后端读取配置文件优化。

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ file_storage
 backend/__pycache__
 backend/*/__pycache__
 backend/alembic/versions/__pycache__
+backend/.idea
 
 frontend/.DS_Store
 frontend/node_modules
